Laboratory Image Upload + UI overhaul

--- a/UnivMedicalRecord/Pages/CreateUser/Index.cshtml
+++ b/UnivMedicalRecord/Pages/CreateUser/Index.cshtml
@@ -13,17 +13,13 @@
 </head>
 
 <body>
-<section class="vh-100" style="background-color: #0072A0;">
+<section class="vh-100" style="background-color: #808080;">
     <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col col-xl-10">
                 <div class="card" style="border-radius: 1rem;">
                     <div class="row g-0">
-                        <div class="col-mb-5 col-lg-5 d-none d-md-block">
-                            <img src="https://img.freepik.com/free-vector/admin-concept-illustration_114360-2332.jpg?w=740&t=st=1683473535~exp=1683474135~hmac=ce016de988ef0d7a47c93003846362a25b7da5a727499b4da85b1978b6313974"
-                                 alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;" />
-                        </div>
-                        
+
                         <div class="col-md-4 col-lg-6 d-flex align-items-center">
                             <div class="card-body p-4 p-lg-4 text-black">
                         
@@ -94,7 +90,7 @@
                                     &nbsp;
 
                                     <div class="form-outline mb-2 w-75">
-                                        <input type="submit" value="Create" class="btn btn-primary"/>
+                                        <input type="submit" value="Create" class="btn btn-dark"/>
                                     </div>
                                 </form>
                             </div>
