--- a/UnivMedicalRecord/Pages/Homepage/Index.cshtml
+++ b/UnivMedicalRecord/Pages/Homepage/Index.cshtml
@@ -3,20 +3,40 @@
 @using Microsoft.EntityFrameworkCore
 @using UniversityMedicalRecord.Data
 @using UniversityMedicalRecord.Models
+@using UnivMedicalRecord.Models.Record
+@using System.Collections.Immutable
 @model UnivMedicalRecord.Pages.Homepage.IndexModel
 
 
 @{
   Layout = null;
 }
+
 <html>
+<style>
+  .card-container {
+        display: flex;
+        flex-direction: column;
+      }
+  
+      .card {
+        border: 1px solid #ccc;
+        border-radius: 8px;
+        padding: 20px;
+        background-color: #f9f9f9;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        margin-bottom: 20px;
+      }
+      
+      
+</style>
     <head> 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     </head>
-    <body style="overflow-y: hidden; overflow-x: hidden;">
+    <body style="overflow-y: auto; overflow-x: hidden; margin-right: 0">
     <div class="row" style="height:100%;">
-      <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark col-md-4" style="width: 280px;">
+      <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark col-md-4" style="width: 280px; height: auto">
         <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
           <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
           <span class="fs-4">Menu</span>
@@ -104,46 +124,53 @@
           </ul>
         </div>
       </div> 
-      <div class="col-md-8">
-        @{
-          if (Model.Type == "Admin")
-          {
-            <div>
-              <div class="row d-flex justify-content-md-center vh-100">
-                <div class="col-md-10">
-                  <div class="card m-lg-5 h-25">
-                    <h4 class="card-header">
-                      Student/Employee List
-                    </h4>
-                    <div class="card-body">
-                      <div class="row mt-2">
-                        <div class="col-md-15">
-                          <table class="table">
-                            <thead>
-                            <tr>
-                              <th>Name</th>
-                              <th scope="col"> </th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            @foreach (var x in Model.Users)
-                            {
-                              <tr>
-                                <td>@x.Firstname</td>
-                                <td><a class="btn btn-dark" style="float: right" asp-page="./AddLab" asp-route-Id="@x.Id">Add Lab Record</a></td>
-                              </tr>
-                            }
-                            </tbody>
-                          </table>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
+      <div class="col-md-8" style="background-color: #8080">
+        @if (Model.Type == "Admin")
+        {
+          <div style="flex-direction: row">
+            <h1 class="mt-4" style=" font-size: 20px;color: #0d0d0d;font-family: Roboto, sans-serif;line-height: 1.2;">Pending Lab Records: </h1>
+            @if ( !Model.PendingLab.Any())
+            {
+              <h1 class="mt-4" style=" font-size: 15px;color: #0d0d0d;font-family: Roboto, sans-serif;line-height: 1.2;">There are no pending lab records: </h1>
+            }
+            else
+            {
+              @foreach (var x in Model.PendingLab)
+              {
+                 
+                <div class="card mt-3" style=" cursor: pointer; border: 2px solid #0000; border-radius: 8px; padding: 20px;background-color: #ffffff;box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); margin-bottom: 20px;">
+                  <b>
+                    <h1 style="font-size: 20px">@x.User.Firstname @x.User.Lastname</h1></b>
+                  <p style="font-size: 15px">Pending Record/s:
+
+                    @if (x.CbcEncoded == false)
+                    {
+                      <label style="font-size: 15px;">Cbc Record</label>
+                    }
+                    @if (x.FecalEncoded == false)
+                    {
+                      <label style="font-size: 15px">,Fecalysis Record</label>
+                    }
+                    @if (x.UrinalEncoded == false)
+                    {
+                      <label style="font-size: 15px ">,Urinalysis Record</label>
+                    }
+                    @if (x.CholesEncoded == false)
+                    {
+                      <label style="font-size: 15px">,Cholesterol Record</label>
+                    }
+                    
+                  </p>
+                  <a class="btn-close-dark" asp-page="../LaboratoryRecord/AddLab" asp-route-id="@x.User.Id" style="border-bottom: 1px dotted; color: #000000; text-decoration: none;">Edit</a>
                 </div>
-              </div>
-            </div>
-          }
-          else
+              }
+            }
+          </div>
+        }
+              
+              
+
+        else
           {
             <div class="row">
               @for (int i = 0; i < 3; i++)
@@ -159,13 +186,10 @@
                     </div>
                   </div>
                 </div>
-                
+
               }
             </div>
-            
           }
-        }
-        
       </div>
     </div>
     </body>
