--- a/UnivMedicalRecord/Pages/CreateUser/Index.cshtml
+++ b/UnivMedicalRecord/Pages/CreateUser/Index.cshtml
@@ -16,13 +16,11 @@
 <section class="vh-100" style="background-color: #808080;">
     <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
-            <div class="col col-xl-10">
+            <div class="col col-xl-5" style="align-self: center; align-content: center">
                 <div class="card" style="border-radius: 1rem;">
                     <div class="row g-0">
-
                         <div class="col-md-4 col-lg-6 d-flex align-items-center">
                             <div class="card-body p-4 p-lg-4 text-black">
-                        
                                 <form method="post">
                                     
                                     <h5 class="fw-normal mb-2 pb-2" style="letter-spacing: 1px;">@Model.PageTitle</h5>
