--- a/UnivMedicalRecord/Pages/Homepage/Inbox.cshtml
+++ b/UnivMedicalRecord/Pages/Homepage/Inbox.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @using Microsoft.AspNetCore.Mvc.TagHelpers
 @using Microsoft.EntityFrameworkCore
+@using Microsoft.VisualBasic
 @using UniversityMedicalRecord.Data
 @using UniversityMedicalRecord.Models
 @model UnivMedicalRecord.Pages.Homepage.Inbox
@@ -9,61 +10,167 @@
 @{
   Layout = null;
 }
-<html>
+<html style="overflow: unset; overflow-scrolling: unset">
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+
+<head> 
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-        <div>
-          <div class="row d-flex justify-content-md-center vh-100" style="background: #8080">
-            <div class="col-md-10">
-              <div class="card m-lg-5 h-75 border-dark">
-                <h4 class="card-header">
-                  Message Board
-                  <form class="d-lg-inline"method="post">
-                    <button type="submit" class="btn btn-dark m-1" width="16" height="16" asp-page-handler="Compose" style="float: right">Compose</button>
-                    <button type="submit" class="btn btn-danger m-1" width="16" height="16" asp-page-handler="Close" style="float: right">Back</button>
-                  </form>
-                </h4>
-                <div class="card-body">
-                  @{
-                    if (!Model.Messages.Any())
-                    {
-                      <div align="center">
-                        <text>You have no messages.</text>
-                      </div>
-                    }
-                    else
-                    {
-                      <div class="row mt-2">
-                        <div class="col-md-15">
-                          <table class="table">
-                            <thead>
-                            <tr>
-                              <th>From</th>
-                              <th>Date</th>
-                              <th>Message</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            @foreach (var x in Model.Messages)
-                            {
-                              <tr>
-                                <td>@x.User.Username</td>
-                                <td>@x.Date</td>
-                                <td>@x.message</td>
-                              </tr>
-                            }
-                            </tbody>
-                          </table>
+<title></title>
+    <link rel="stylesheet" href="./css/site.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+
+        </head>
+<body style="overflow-x: hidden">
+<div class="row" style="height: max-content; overflow: unset">
+  <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark col-md-4" style="width: 280px; height: auto">
+    <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+      <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
+      <span class="fs-4">Menu</span>
+    </a>
+    <hr>
+    <ul class="nav nav-pills flex-column mb-auto">
+      <li>
+        <a href="#" class="nav-link text-white">
+          <form class="form-inline" method="post">
+            <button type="submit" class="dropdown-item" width="16" height="16" asp-page-handler="Dashboard">Dashboard</button>
+          </form>
+        </a>
+      </li>
+
+      @{
+        if (Model.Type == "Admin")
+        {
+          <li>
+            <a href="#" class="nav-link text-white">
+              <form class="form-inline" method="post">
+                <button type="submit" class="dropdown-item" asp-page-handler="ViewRecords">View Medical Records</button>
+              </form>
+            </a>
+          </li>
+        }
+      }
+          
+      @{
+        if (Model.Type == "Regular")
+        {
+          <li>
+            <a href="#" class="nav-link text-white">
+              <form class="form-inline" method="post">
+                <button type="submit" class="dropdown-item" width="16" height="16" asp-page-handler="LabResult">Laboratory Test</button>
+              </form>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="nav-link text-white">
+              <form class="form-inline" method="post">
+                <button type="submit" class="dropdown-item" width="16" height="16" asp-page-handler="MedicalRecord">MedicalRecord</button>
+              </form>
+            </a>
+          </li>
+        }
+      }
+      <li>
+        <a href="#" class="nav-link text-white">
+          <form class="form-inline" method="post">
+            <button type="submit" class="dropdown-item" width="16" height="16" asp-page-handler="Inbox">Inbox</button>
+          </form>
+        </a>
+      </li>
+    </ul>
+    <hr>
+    <div class="dropdown">
+      <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
+        <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
+        <strong>@Model.Name</strong>
+      </a>
+      <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
+        <li>
+          @{
+            if (Model.Type == "Admin")
+            {
+              <form class="form-inline" method="post">
+                <button type="submit" class="dropdown-item" asp-page-handler="CreateAccount">Create Account</button>
+              </form>
+              <li><hr class="dropdown-divider"></li>
+            }
+          }
+        </li>
+        <li>
+          <form class="form-inline" method="post">
+            <button type="submit" class="dropdown-item" asp-page-handler="Logout">Logout</button>
+          </form>
+        </li>
+      </ul>
+    </div>
+  </div> 
+  <div class="col-md-8" style="background-color: #8080" style="overflow: auto">
+    <div class="row d-flex justify-content-md-center vh-100" style="background: #8080">
+      <div class="col-md-10">
+        <div class="card m-lg-5 h-75 border-dark">
+          <h4 class="card-header">
+            Message Board
+            <form class="d-lg-inline"method="post">
+              <button type="submit" class="btn btn-dark m-1" width="16" height="16" asp-page-handler="Compose" style="float: right">Compose</button>
+              <button type="submit" class="btn btn-danger m-1" width="16" height="16" asp-page-handler="Close" style="float: right">Back</button>
+            </form>
+          </h4>
+          <div class="card-body" style="overflow: auto">
+            @{
+              if (!Model.MessageList.Any())
+              {
+                <div align="center">
+                  <text>You have no messages.</text>
+                </div>
+              }
+              else
+              {
+                @for (int i = 0; i < Model.From.Count && i < Model.MessageRecieved.Count && i < Model.DateRecieved.Count && i < Model.MessageId.Count; i++)
+                {
+                  var from = Model.From[i];
+                  var msg = Model.MessageRecieved[i];
+                  var Date = Model.DateRecieved[i];
+                  var id = Model.MessageId[i];
+                  
+                  <div class="card mt-3" style="cursor: pointer; border: 2px solid #0000; border-radius: 8px; padding: 20px; background-color: #ffffff; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); margin-bottom: 20px;">
+                    <label style="font-size: 25px;">@from</label>
+                    <label style="font-size: 20px;">@Date</label>
+                    <p style="font-size: 15px;">@msg.</p>
+                    <a style="background-color: transparent; color: #000000;text-decoration: none; border-bottom: none;" class="btn-close-dark" data-toggle="modal" data-target="#deleteModal_@id">Delete</a>
+                    <div class="modal fade" id="deleteModal_@id" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel_@id" aria-hidden="true">
+                      <div class="modal-dialog modal-dialog-centered" role="document">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <h5 class="modal-title" id="deleteModalLabel_@id">Delete Message</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                          </div>
+                          <div class="modal-body">
+                            <text>Are you sure you want to delete this message From "@from"? This cannot be undone.</text>
+                          </div>
+                          <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                            <form method="post" asp-page-handler="Delete" asp-route-id="@id">
+                              <button type="submit" class="btn btn-danger">Delete</button>
+                            </form>
+                          </div>
                         </div>
                       </div>
-                    }
-                  }
-                </div>
-              </div>
-            </div>
+                    </div>
+                  </div>
+                  
+                }
+              }
+            }
           </div>
         </div>
+      </div>
+    </div>
+  </div>
+</div>
+</body>
 </html>
 
 
