--- a/UnivMedicalRecord/Pages/Homepage/Index.cshtml
+++ b/UnivMedicalRecord/Pages/Homepage/Index.cshtml
@@ -34,8 +34,8 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     </head>
-    <body style="overflow-y: auto; overflow-x: hidden; margin-right: 0">
-    <div class="row" style="height:100%;">
+    <body style="overflow-x: hidden; overflow-y: hidden">
+    <div class="row" style="height: 100%;">
       <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark col-md-4" style="width: 280px; height: auto">
         <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
           <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
@@ -54,13 +54,6 @@
           @{
             if (Model.Type == "Admin")
             {
-              <li>
-                <a href="#" class="nav-link text-white">
-                  <form class="form-inline" method="post">
-                    <button type="submit" class="dropdown-item" asp-page-handler="LabTest">Lab Test</button>
-                  </form>
-                </a>
-              </li>
               <li>
                 <a href="#" class="nav-link text-white">
                   <form class="form-inline" method="post">
@@ -124,55 +117,66 @@
           </ul>
         </div>
       </div> 
-      <div class="col-md-8" style="background-color: #8080">
+      <div class="col-md-8" style="background-color: #8080" style="overflow: auto">
         @if (Model.Type == "Admin")
         {
+          <div class="card" style="flex-direction: row; align-items: center; background-color: #111; box-shadow: unset">
+            <h1 class="mt-4" style=" font-size: 20px;color: #ffffff;font-family: Roboto, sans-serif;line-height: 1.2;">Pending Lab Records: </h1>
+          </div>
+
           <div style="flex-direction: row">
-            <h1 class="mt-4" style=" font-size: 20px;color: #0d0d0d;font-family: Roboto, sans-serif;line-height: 1.2;">Pending Lab Records: </h1>
-            @if ( !Model.PendingLab.Any())
-            {
-              <h1 class="mt-4" style=" font-size: 15px;color: #0d0d0d;font-family: Roboto, sans-serif;line-height: 1.2;">There are no pending lab records: </h1>
+              
+              @if (!Model.PendingLab.Any())
+              {
+                <h1 class="mt-4" style=" font-size: 15px;color: #0d0d0d;font-family: Roboto, sans-serif;line-height: 1.2;">There are no pending lab records: </h1>
+              }
+              else
+              {
+                @foreach (var x in Model.PendingLab)
+                {
+                  @if (x.CholesterolRes == null & x.FecalysisRes == null & x.UrinalysisRes == null & x.CbcRes == null)
+                  {
+                    <label> </label>
+                  }
+                  else
+                  {
+                    <div class="card mt-3" style=" cursor: pointer; border: 2px solid #0000; border-radius: 8px; padding: 20px;background-color: #ffffff;box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); margin-bottom: 20px;">
+                      <b>
+                        <h1 style="font-size: 25px">@x.User.Firstname @x.User.Lastname</h1></b>
+                      <p style="font-size: 20px">Pending Record/s:
+
+                        @if (x.CbcEncoded == false & x.CholesterolRes != null & x.FecalysisRes != null & x.UrinalysisRes != null & x.CbcRes != null)
+                        {
+                          <label style="font-size: 15px;">Cbc Record</label>
+                        }
+                        @if (x.FecalEncoded == false & x.CholesterolRes != null & x.FecalysisRes != null & x.UrinalysisRes != null & x.CbcRes != null)
+                        {
+                          <label style="font-size: 15px">,Fecalysis Record</label>
+                        }
+                        @if (x.UrinalEncoded == false & x.CholesterolRes != null & x.FecalysisRes != null & x.UrinalysisRes != null & x.CbcRes != null)
+                        {
+                          <label style="font-size: 15px ">,Urinalysis Record</label>
+                        }
+                        @if (x.CholesEncoded == false & x.CholesterolRes != null & x.FecalysisRes != null & x.UrinalysisRes != null & x.CbcRes != null)
+                        {
+                          <label style="font-size: 15px">,Cholesterol Record</label>
+                        }
+                      </p>
+                      <a style="background-color: transparent; color: #000000;text-decoration: none;border-bottom: 1px dotted;" class="btn-close-dark" asp-page="../LaboratoryRecord/AddLab" asp-route-id="@x.User.Id">Edit</a>
+                    </div>
+                  }
+
+                }
+              }
+            </div>
             }
+
+
+
             else
             {
-              @foreach (var x in Model.PendingLab)
-              {
-                 
-                <div class="card mt-3" style=" cursor: pointer; border: 2px solid #0000; border-radius: 8px; padding: 20px;background-color: #ffffff;box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); margin-bottom: 20px;">
-                  <b>
-                    <h1 style="font-size: 20px">@x.User.Firstname @x.User.Lastname</h1></b>
-                  <p style="font-size: 15px">Pending Record/s:
-
-                    @if (x.CbcEncoded == false)
-                    {
-                      <label style="font-size: 15px;">Cbc Record</label>
-                    }
-                    @if (x.FecalEncoded == false)
-                    {
-                      <label style="font-size: 15px">,Fecalysis Record</label>
-                    }
-                    @if (x.UrinalEncoded == false)
-                    {
-                      <label style="font-size: 15px ">,Urinalysis Record</label>
-                    }
-                    @if (x.CholesEncoded == false)
-                    {
-                      <label style="font-size: 15px">,Cholesterol Record</label>
-                    }
-                    
-                  </p>
-                  <a class="btn-close-dark" asp-page="../LaboratoryRecord/AddLab" asp-route-id="@x.User.Id" style="border-bottom: 1px dotted; color: #000000; text-decoration: none;">Edit</a>
-                </div>
-              }
-            }
-          </div>
-        }
-              
-              
-
-        else
-          {
             <div class="row">
+
               @for (int i = 0; i < 3; i++)
               {
                 <div class="col-md-4 mb-4 mt-4">
@@ -186,11 +190,10 @@
                     </div>
                   </div>
                 </div>
-
               }
             </div>
-          }
-      </div>
+            }
+          </div>
     </div>
     </body>
 </html>
