--- a/UnivMedicalRecord/Pages/Homepage/Records.cshtml
+++ b/UnivMedicalRecord/Pages/Homepage/Records.cshtml
@@ -26,9 +26,10 @@
 <body>
 <div class="site-wrapper m-md-5">
 	<form method="post">
-		<div class="card" style="flex-direction: row; align-items: center; background-color:black; box-shadow: unset">
-			<button class="btn btn-dark m-lg-3" asp-page-handler="Dashboard" type="submit">Back To Dashboard</button>
+		<div class="card" style="flex-direction: row; background-color:black; box-shadow: unset">
+			<h1 class="mt-4" style=" font-size: 20px;color: #ffffff;font-family: Roboto, sans-serif;line-height: 1.2;">Medical Records: </h1>
 		</div>
+		<button class="btn btn-dark m-lg-3" asp-page-handler="Dashboard" style="float: right" type="submit">Back To Dashboard</button>
 	</form>
 	<section class="tabs-wrapper m-lg-20">
 		<div class="tabs-container">
