--- a/UnivMedicalRecord/Pages/Homepage/Index.cshtml
+++ b/UnivMedicalRecord/Pages/Homepage/Index.cshtml
@@ -30,10 +30,21 @@
       
       
 </style>
-    <head> 
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-    </head>
+<head>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+  
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+          
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+  
+  <link rel="stylesheet" href="./css/site.css">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+</head>
+
 <body style="overflow-x: hidden; overflow-y: auto">
 <div class="row" style="height: 100%;">
   <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark col-md-4" style="width: 280px; height: auto">
@@ -61,9 +72,51 @@
               </form>
             </a>
           </li>
+          <li>
+            <form class="form-inline">
+              <a style="font: unset" type="submit" class="dropdown-item m-lg-3 mt-0" data-toggle="modal" data-target=".RequestUsers">Request</a>
+              </form>
+          </li>
         }
       }
-          
+      
+      <div class="modal fade RequestUsers" id="RequestUsers" role="dialog" aria-labelledby="RequestUsers" aria-hidden="true">
+        <div class="modal-dialog modal-sm">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 style="color: black; font-size: 20px">List of Users</h1>
+            </div>
+            <div class="modal-body" style="overflow: auto">
+              @if (Model.requestUser != null)
+              {
+                @foreach (var x in Model.requestUser)
+                {
+                  <div class="card">
+                    <label style="color: black; font-size: 20px">@x.Firstname @x.Lastname </label>
+                    <label style="color: black; font-size: 15px">@x.Type</label>
+                    <form method="post" asp-page-handler="Request" asp-route-id="@x.Id">
+                      @if (x.IsRequested == false)
+                      {
+                        <button style=" background-color: transparent;color: #000000;text-decoration: none; border-bottom: 1px dotted; display: inline-block;" type="submit" class="btn btn-close-dark">Request Record</button>
+                      }
+                      else
+                      {
+                        <label style="color: black; font-size: 10px">Record has already been requested</label>
+                      }
+                    </form>
+                  </div>
+                }
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+              }
+              else
+              {
+                <text>No User To Display</text>
+              }
+            </div>
+          </div>
+        </div>
+      </div>
+
       @{
         if (Model.Type == "Regular")
         {
@@ -121,9 +174,12 @@
   <div class="col-md-8" style="background-color: #8080" style="overflow: auto">
     @if (Model.Type == "Admin")
     {
-      <div class="card" style="flex-direction: row; align-items: center; background-color: #111; box-shadow: unset">
+      <div class="card" style="flex-direction: row; background-color: #111; box-shadow: unset">
         <h1 class="mt-4" style=" font-size: 20px;color: #ffffff;font-family: Roboto, sans-serif;line-height: 1.2;">Pending Lab Records: </h1>
+       
       </div>
+      
+      
 
       <div style="flex-direction: row">
               
@@ -186,8 +242,6 @@
                 <h5 class="card-title">Card title</h5>
                 <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-dark">Card link</a>
-                <a href="#" class="btn btn-dark">Another link</a>
               </div>
             </div>
           </div>
